@@ -24,12 +24,25 @@
 # code to the testsuite after the terminal ends.
 
 # You may change run_prog_manual.sh according to you needs, especially
-# if you want to use a different terminal/temrinal manager than xterm/screen
+# if you want to use a different terminal/terminal manager than xterm/screen
 # or different options for these.
 
 
-function test_with_xterm () {
-  xterm -T 'GnuCOBOL Manual Test Run' \
+TIMEOUT=40        # timeout in seconds
+
+#SLEEP_SCALE=1    # always possible
+SLEEP_SCALE=0.1   # needs a "modern" sleep implementation
+
+TIMEOUT_CMD=
+
+timeout -version 2>/dev/null 1>&2
+if test $? -eq 0; then
+  TIMEOUT_CMD=
+fi
+
+_test_with_xterm () {
+   # timeout "$TIMEOUT" \_   # activate if you have a working timeout binary/script
+   xterm -T 'GnuCOBOL Manual Test Run' \
         -fa 'Liberation Mono' -fs 14 \
         -e "bash -c '($COBCRUN_DIRECT ./prog 2>./syserr.log && echo $? > ./result) || echo 1 > ./result'"
 }
@@ -38,45 +51,50 @@ function test_with_xterm () {
 # Note: when using screen manager you have to
 #       run `screen -r "GCTESTS" in a separate terminal
 #       within 5 seconds after starting the tests
-function test_with_screen () {
+_test_with_screen () {
   # check if screen session already exists, setup if not 
-  screen -S "GCTESTS" -X select . 2>&1 1>/dev/null
-  if test "$?" != "0"; then
+  screen -S "GCTESTS" -X select . 2>/dev/null 1>&2
+  if test $? -ne 0; then
      screen -dmS "GCTESTS"
      screen -S "GCTESTS" -X stuff ". \"$PWD/../../atconfig\" && . \"$PWD/../../atlocal\"
 "
      sleep 5
   fi
   # run actual test in screen session
-  screen -S "GCTESTS" -X stuff "bash -c \"cd \\\"$PWD\\\" && ($COBCRUN_DIRECT ./prog 2>./syserr.log && echo $? > ./result) || echo 1 > ./result \"
-"
+  screen -S "GCTESTS" -X exec ... bash -c "cd \"$PWD\" && ($COBCRUN_DIRECT ./prog 2>./syserr.log && echo $? > ./result) || echo 1 > ./result"
 }
 
-# wait 60 seconds for the result file to be available
-function wait_result () {
-  # version that should work everywhere...
-  #local wait_time="60"
-  #until test $((wait_time--)) -eq 0 -o -f "./result" ; do sleep 1; done
-  # version that needs a "modern" sleep implementation:
-  local wait_time="600"
-  until test $((wait_time--)) -eq 0 -o -f "./result" ; do sleep 0.1; done
-  ((++wait_time))
+# wait TIMEOUT seconds for the result file to be available
+_wait_result () {
+  local wait_time=$TIMEOUT
+  if test "x$SLEEP_SCALE" = "x0.1"; then
+    wait_time=$(expr $((wait_time)) \* 10)
+  fi
+  until test $((wait_time)) -eq 0 -o -f "./result"; do
+    sleep "$SLEEP_SCALE"
+    wait_time=$(expr $((wait_time)) - 1)
+  done
+  test ! $((wait_time)) -eq 0
 }
 
 
 # actual test
+
 rm -f ./result ./syserr.log
 if test ! -z "$DISPLAY"; then
-  test_with_xterm
+  _test_with_xterm  || echo $? > ./result
 else
-  test_with_screen
+  _test_with_screen || echo $? > ./result
 fi
 
-wait_result || {
-  (>&2 echo "No result file after waiting for 60 seconds!")
-  echo 124 > ./result # same value as timout from GNU coreutils
+_wait_result || {
+  (>&2 echo "No result file after waiting for $TIMEOUT seconds!")
+  if test ! -z "$DISPLAY"; then
+    screen -S "GCTESTS" -X kill
+  fi
+  echo 124 > ./result
 }
 if test -f ./syserr.log; then
   (>&2 cat ./syserr.log)
 fi
-exit `cat ./result`
+exit "$(cat ./result)"
