@@ -1,4 +1,12 @@
 
+2018-03-27  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
+
+	* testsuite.src/run_manual_screen.at: adjusted keywords,
+	  skip screen tests if support for it is missing (we should adjust
+	  at least the bell test to be run)
+	* run_prog_manual.sh.in: tweaked template for better portability,
+	  fixed non-working timeout
+
 2018-03-26  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	* run_prog_manual.sh.in: add option to run manual tests in
